# tiralabra

./: .coveragerc  .gitignore  README.md  data.csv  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md  viikot7-9.md
src/: astar.py  dijkstra.py  index.py  jps.py  kayttoliittyma.py  renderoija.py  ruutu.py  suorituskyky.py
src/tests/: astar_test.py  dijkstra_test.py  jps_test.py  ruutu_test.py
